# nighty_code

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DESIGN_CONCEPTS.md  DESIGN_REVIEW.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fix_openai_validation.py  interactive_llm.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  test_base_url.py  test_complex_qa.py  test_copilot.py  test_copilot_interactive.py  test_copilot_providers.py  test_copilot_qa.py  test_dataminer_improved.py  test_dataminer_simple.py  test_examples.py  test_genai_chat.py  test_genai_direct.py  test_genai_instructor.py  test_genai_simple.py  test_instructor.py  test_instructor_performance.py  test_llm.py  test_llm_comprehensive.py  test_llm_debug.py  test_llm_simple.py  test_middleware_protection.py  test_simple_qa.py  (+1 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  tests.yml
config/: default.yaml  llm_example_remove_suffix.yaml  llm_genai.yaml  logging.yaml  mcp_config.yaml
docs/api/: mcp_tools.md
docs/architecture/: graph_design.md  (+2 more)
examples/: analyze_repo.py  copilot_usage.py  dataminer_usage.py  llm_usage.py  mcp_usage.py  query_graph.py  sample_queries.md  scan_repository.py
sample_repos/: .scanignore
scripts/: download_grammars.py  generate_complete_artifacts.py  setup_neo4j.py  validate_schemas.py
sessions/: 20250820_173542_c5cc1e1d.json  export_20250820_173508_e7c8441f.json  export_20250820_173542_c5cc1e1d.json  knowledge_base.json  test_session_001.json
tests/: conftest.py
(+219 files in other folders)
